crates/jarl-core/src/lints/base/repeat/snapshots/jarl_core__lints__base__repeat__tests__no_fix_with_comments.snap
---
source: crates/jarl-core/src/lints/base/repeat/mod.rs
expression: "get_fixed_text(vec![\"while (\\n#a comment\\nTRUE) { }\\n\",], \"any_is_na\", None)"
---
OLD:
====
while (
#a comment
TRUE) { }

NEW:
====
while (
#a comment
TRUE) { }
